objects/Routing_Disposition_Failure__c.object
<CustomObject>
    <fields>
        <fullName>Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log</label>
        <referenceTo>Logs__c</referenceTo>
        <relationshipLabel>Routing Disposition Failure</relationshipLabel>
        <relationshipName>Routing_Disposition_Failure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_SF_Ids__c</fullName>
        <label>Opportunity SF Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Routing Disposition Failure</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Routing Disposition Failure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Disposition Failure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>